--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 :root {
     --font-family: 'Open Sans', sans-serif;
     --primary: #8e44ad;
+    --primary-dark: #721990;
     --dark: #353b48;
     --danger: #e74c3c;
     --background_light: #ecf0f1;
@@ -34,6 +35,11 @@ h1 {
 ul {
     list-style-type: none;
     padding: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 /* Boutons */
@@ -93,6 +99,29 @@ header {
     background-color: var(--primary);
     padding: 1.5rem;
     box-shadow: var(--box-shadow);
+    color: var(--text-color-light);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-menu {
+    margin: 0;
+}
+
+.header-menu li {
+    border-radius: 3px;
+    padding: 5px 15px;
+    transition: background-color 0.3s;
+}
+
+.header-menu li:hover {
+    background-color: var(--primary-dark)
+}
+
+.active {
+    background-color: var(--primary-dark);
 }
 
 .logo {
