--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,14 @@ a {
     text-decoration: none;
 }
 
+.p-20 {
+    padding: 20px;
+}
+
+.p-10 {
+    padding: 10px;
+}
+
 /* Boutons */
 
 .btn {
@@ -133,11 +141,21 @@ header {
 /* Content */
 
 .content {
+    max-width: 100rem;
+    width: 100%;
     flex: 1;
     display: flex;
-    flex-flow: row;
-    justify-content: center;
+    flex-flow: column;
+    align-self: center;
+    padding: 2rem 0;
     align-items: center;
+}
+
+.block {
+    border-radius: 3px;
+    border: var(--border);
+    background-color: white;
+    box-shadow: var(--box-shadow);
 }
 
 /* Footer */
