--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,33 @@
-.category-container h2 {
+.newsfeed-container {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.category-container {
+    flex: 250px;
+}
+
+.category-container li {
+    margin: 1rem 0;
+    transition: .3s;
+}
+
+.category-container li:hover {
+    color: var(--primary);
+    cursor: pointer;
+}
+
+.cat-active {
+    color: var(--primary);
+    font-weight: 700;
+}
+
+.small {
+    font-size: 1.3rem;
+    margin: 0 .5rem;
+}
+
+.feed-container h2 {
     font-size: 1.9rem;
     padding: 0 1.5rem;
 }
@@ -15,15 +44,19 @@
     margin: 1rem;
     min-height: 41rem;
     cursor: pointer;
-    overflow: hidden;
 }
 
 .article h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding: 1rem 1.5rem;
 }
+
 .article:hover .img-container {
     transform: scale(1.2);
+}
+
+.overflow {
+    overflow: hidden;
 }
 
 .img-container {
