Mise en place de la page "Profil"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,6 +163,7 @@ header {
     margin: 0;
     display: flex;
     flex-flow: row;
+    align-items: center;
 
 }
 
@@ -175,6 +176,21 @@ header {
 
 .header-menu li:hover {
     background-color: var(--primary-dark);
+}
+
+li.header-profile {
+
+    font-weight: 700;
+    background-color: var(--dark);
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
 }
 
 .active {
