Mise en place de la page "Profil"

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -12,11 +12,11 @@
     margin-right: 5px;
 }
 
-.articles-list li {
+.articles-list {
     width: 80%;
 }
 
-.articles-list li {
+.articles-list ul li {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
